SERVER-26716 Fix crash after 3.2->3.4->3.2 up/downgrade

This was only an issue for nodes that had never done writes as a secondary
and therefore hadn't written a minValid point.